--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ provider:
   runtime: python3.6
   stage: dev
   region: ap-northeast-1
+  memorySize: 128
   iamRoleStatements:
     - Effect: Allow
       Action:
